--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,10 @@
   color-scheme: light dark;
 }
 
+.logo-brand {
+  color: #1770c9;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -31,7 +35,7 @@ textarea {
 
 body {
   margin: 0;
-  min-width: 32rem;
+  /* min-width: 32rem; */
   min-height: 100vh;
 }
 
@@ -56,4 +60,108 @@ h1 {
 
 li {
   list-style: none;
+}
+
+.grid {
+  display: grid;
+  gap: 6.4rem;
+}
+
+.grid-two-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-four-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+button {
+  text-transform: capitalize;
+  padding: 1rem 2.2rem;
+  font-size: 1.7rem;
+  font-weight: 500;
+  background-color: var(--btn-color);
+  border-radius: 0.8rem;
+  -webkit-border-radius: 0.8rem;
+  -moz-border-radius: 0.8rem;
+  -ms-border-radius: 0.8rem;
+  -o-border-radius: 0.8rem;
+  border: 0.1rem solid transparent;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
+  transition: border-color 0.3s;
+  -webkit-transition: border-color 0.3s;
+  -moz-transition: border-color 0.3s;
+  -ms-transition: border-color 0.3s;
+  -o-transition: border-color 0.3s;
+}
+
+.secondary-btn {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 0.2rem var(--btn-color);
+  margin-left: 3.2rem;
+}
+
+button:hover {
+  box-shadow: inset 0 0 0 0.2rem #242424;
+  background-color: #99b9ff;
+  color: #242424;
+}
+
+a:hover,
+a.active {
+  color: #f7ff99;
+}
+
+.section-hero {
+  & .grid {
+    align-items: center;
+  }
+  .hero-content {
+    & p {
+      margin: 2.4rem 0 4.8rem 0;
+      &:first-child {
+        margin: 0 0 1.2rem 0;
+      }
+    }
+  }
+
+  .hero-image {
+    display: flex;
+    justify-content: center;
+    & img {
+      width: 70%;
+      height: auto;
+    }
+  }
+}
+
+.section-analytics {
+  margin: 9.6rem 0;
+
+  & .container {
+    background-color: var(--bg-color);
+    border-radius: 1rem;
+  }
+
+  & .grid {
+    color: var(--dark-color);
+
+    & .div1 {
+      text-align: center;
+      border-right: 0.2rem solid var(--dark-color);
+
+      &:last-child {
+        border: none;
+      }
+
+      & h2 {
+        font-size: 3.8rem;
+      }
+
+      & p {
+        text-transform: capitalize;
+      }
+    }
+  }
 }
