Work on Admin Panel

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -466,3 +466,8 @@ a.active {
     }
   }
 }
+
+.toastBody {
+  font-family: "Atlas Grotesk web", Arial, Helvetica, sans-serif;
+  font-size: 1.7rem;
+}
